@@ -1,6 +1,7 @@
 Revision history for perl distribution Convos
 
 6.06 Not released
+ - Add /shrug command
  - Fix not learning "h is tory" facts
 
 6.05 2021-02-23T13:43:00+0900
